# rshell

./: .gitignore  .gitmodules  Assignment 4.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  operation.h  rshell  tasks.md  test  test.cpp
src/: main.cpp  operation.cpp  operation.h  program.cpp  program.h  reader.h  test.cpp
tests/: test.cpp  testOutput1.txt
